.. _dataclasses-release-notes:

Release Notes
=============

main
----
* Small bugfix to the pybindings of the MapOMKeyI3IceTopSLCCalibration (#3361)

Feb. 20, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.2

* add some boost headers which presumably were implicit in the past
* Delete mailinglist files (#3357)
* Add upgrade rules to ruff (#3316)
* Remove all tab characters used for indentation from python files (#3300)

Dec. 14, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.0

* Remove Uber Header (I3.h) (#3151)
* Update radcube (#3308)
* Remove naive datetime() objects (#3304)
* fix E703 useless-semicolon (#3266)
* general python cleanups (ruff/B018) (#3264)
* python ruff cleanup fix EXE001 (#3289)
* Pass an integer to randint in leap_second_test
* remove I3Test.ENSURE* family of convenience functions (#3192)
* added I3MapAntennaKeyAntennaKey

Sep. 28, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.8.0

* replace deprecated unittest asserts with modern equivalents  (#3168)

June 22, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.7.0

* Documentation cleanups
* Make I3Tray.I3Tray and icecube.icetray.I3Tray the same thing. (#3102)
* Remove all references to load_pybindings (#3086)
* remove python 2.4 forward compatibility (#3080)
* Modify the "icetop_pulse_extract.py" part of filterscripts_v2, to incorporate plans for new SLCcal procedures. (#3069)
* update tree.hh to avoid deprecated std::allocator (#3067)
* Add "SnowHeightProvenance" enum to I3Geometry (#3018)
* Updates to TriggerKey for the trigger-sim re-write (#2997)

Apr. 12, 2023 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.6.0

* Restore use of BUILD_${PROJECT}=OFF (#3058)