@@ -25,3 +25,10 @@ ParticleTypeVect = ListParticleType
 TankKey.I3VectorTankKey = I3VectorTankKey
 
 del icecube
+
+# tableio exposes classes in _dataclasses.converters
+try:
+    import icecube.tableio
+    from icecube._dataclasses import converters
+except ImportError:
+    ...
