@@ -6,6 +6,8 @@ Release Notes
 main
 ----
 
+* Explicitly import tableio converters (#3412)
+
 Feb. 20, 2024 don la dieu (nega at icecube.umd.edu)
 ---------------------------------------------------
 IceTray Release v1.9.2
